--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: Stack Problems
-description: My Personal Stack Problems
-author: Agus Makmun
-github: https://github.com/agusmakmun
-about: I'm Programmer for Python & Django. I've made quite a few web apps, especially on Django.
-disqus_shortname: stackproblems
-google_analytics: UA-XXXXXXXX-Y
+title: Sa Pham Blog
+description: Just wanna share something
+author: Sa Pham
+github: https://github.com/greatbn
+about: Interested in Cloud Computing, Programming and Security.
+disqus_shortname: sa-pham
+google_analytics: UA-56480291-2
 
 enableTags: true
 tagarray: []
@@ -24,7 +24,7 @@ social:
     - icon: fa-stack-exchange
       link: "#"
     - icon: fa-github
-      link: "https://github.com/agusmakmun"
+      link: "https://github.com/greatbn"
 
 share:
   twitter_username: github.io
@@ -33,12 +33,12 @@ share:
 urls:
     - text: About Me
       url: /about/
-    - text: My Projects
-      url: /projects/
+    # - text: My Projects
+      # url: /projects/
     - text: XML Feed
       url: /feed.xml
 
-url: "https://agusmakmun.github.io"
+url: "https://greatbn.github.io"
 baseurl: ""
 paginate: 20
 per_page: 20
